chore: Added arm32 support

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -22,6 +22,14 @@ builds:
       - linux
       - windows
       - darwin
+    goarch:
+      - amd64
+      - arm64
+      - arm
+      - "386"
+    goarm:
+      - "6"
+      - "7"
     binary: mast
 
 project_name: mast-cli
